# OrbitBrowser

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
docs/: architecture.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/install/windows/: README.md  installer.nsi
src-tauri/migrations/: 001_init.sql
src-tauri/src/: app_state.rs  lib.rs  main.rs  mcp.rs
src-tauri/src/automation/: cancellation.rs  deno_runtime.rs  mod.rs  page_api.rs  permissions.rs  task_runner.rs
src-tauri/src/browser/: camoufox_locator.rs  camoufox_runtime.rs  cdp_client.rs  chrome_args.rs  chrome_locator.rs  mod.rs  port_allocator.rs  process_manager.rs  profile_manager.rs  recovery.rs  runtime_page.rs  session_registry.rs  stealth.rs  timezone_controller.rs
src-tauri/src/commands/: agent.rs  diagnostics.rs  environments.rs  mod.rs  runs.rs  settings.rs  tasks.rs
src-tauri/src/domain/: agent.rs  artifact.rs  browser_context.rs  environment.rs  mod.rs  proxy.rs  run.rs  settings.rs  task.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/queue/: batch.rs  mod.rs  scheduler.rs  worker.rs
src-tauri/src/storage/: artifact_repo.rs  db.rs  environment_repo.rs  legacy_cleanup.rs  log_repo.rs  migrations.rs  mod.rs  run_repo.rs  settings_repo.rs  task_repo.rs
(+38 files in other folders)
